# recipe_ai_assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  agent.py  docker-compose.yml  langgraph.json  pyproject.toml
data/: sample_recipes.csv
evaluation/: eval_output.md  results.md  test_queries.json
examples/: demo.md
mcp_server/: server.py
rag/: config.py  indexing.py  models.py  reranker.py  retrieval.py
