[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flagembedding>=1.4.0",
    "kagglehub>=1.0.2",
    "mcp>=1.28.0",
    "qdrant-client>=1.18.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
