[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flagembedding>=1.4.0",
    "kagglehub>=1.0.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "langgraph-cli[inmem]>=0.4.30",
    "mcp>=1.28.0",
    "openai>=2.43.0",
    "qdrant-client>=1.18.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag", "mcp_server"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
